# yukari

./: .env.example  .eslintrc.json  .gitignore  Cargo.toml  Procfile  README.md  ani.py  board.py  bottools.py  config.json.example  constants.py  fun.py  mal.py  mgmt.py  package-lock.json  package.json  perms.py  points.py  query.py  requirements.txt  shell.nix  stream.py  util.py  wldr.py  yukari.py
anitools/: ani.py  types.py
src/: audio.rs  main.rs  util.rs  yukari.js
