[package]
name = "wizard"
version = "0.1.0"
authors = ["krashanoff <leo@krashanoff.com>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
serde_json = "1"

rand = "0.8"

serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
songbird = { version = "0.3", features = ["builtin-queue", "serenity-rustls", "yt-dlp"] }
serenity = { version = "0.11", features = ["voice"] }
